test/assignment/infix_operator.lox
var a = "a";
var b = "b";
a + b = "value"; // error: invalid assignment target
